--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,24 @@
+html, body {
+    height: 100%;
+    background-image: url(pokeball.jpg);
+}
+
+h1 {
+    text-align: center;
+    background-color: lightblue;
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
+
+.bodyparts {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .footer {
-    position: fixed;
+    position: static;
     left: 0;
     bottom: 0;
     width: 100%;
@@ -8,6 +27,25 @@
     text-align: center;
 }
 
-#weatherResults {
-    padding-left: 5px;
+.makeFlex {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.toBeBoxed {
+    background-color: lightblue;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    padding-left: 1%;
+    width: 40%;
+}
+
+#pokeResults {
+    padding-left: 1%;
+    background-color: lightblue;
+    width: 25%;
+    text-align: left;
+    /* padding-top: 1%;
+    padding-bottom: 1%; */
 }
